Wed Oct 24 11:10:54 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Version 1.3.10, interface age, binary age = 0.

	* NEWS: Updates

Thu Oct 25 12:01:41 2001  Owen Taylor  <otaylor@redhat.com>

	* tests/Makefile.am: Temporarily remove mainloop-test, since it
	prevents distcheck.

2001-10-24  Alex Larsson  <alexl@redhat.com>

	* docs/reference/glib/glib-sections.txt:
	Add g_strtod & co.

	* docs/reference/glib/tmpl/string_utils.sgml:
	Add docs for G_ASCII_DTOSTR_BUF_SIZE.

	* glib/gstrfuncs.[ch]:
	Added g_ascii_strtod, g_ascii_dtostr and g_ascii_formatd.

	* tests/Makefile.am:
	* tests/strtod-test.c:
	Add tests for g_ascii_strtod & co.

2001-10-23  Tor Lillqvist  <tml@iki.fi>

	* config.h.win32.in: Typo: GLIB_MICRO_VERSION and
	GLIB_MINOR_VERSION were swapped.

	* glib/gutils.h: Remove G_HARDCODED_PATH_WRAPPER, Owen didn't like
 	it.
	
	* glib/gutils.c: Instead, expand it on Win32 as
 	_glib_get_locale_dir(), and #define GLIB_LOCALE_DIR as a call to
 	it.

2001-10-23  Tor Lillqvist  <tml@iki.fi>

	* config.h.win32.in: Typo.

	* glibconfig.h.win32.in: Minor update to correspond to what
	configure now generates.

	* glib/Makefile.am: (Win32): If we have built the MSVC import
	library, install it. Install the gcc import library. Also support
	uninstall.

	* glib/gutils.h: Add macros G_WIN32_DLLMAIN_FOR_DLL_NAME and
	G_HARDCODED_PATH_WRAPPER. These are used to avoid hardcoding path
	names into Windows DLLs.

	* glib/gutils.c: Use them for GLIB_LOCALE_DIR.

	* glib/gwin32.c (get_package_directory_from_module): Plug a small
	memory leak. Minor code reordering.
	(g_win32_get_package_installation_subdirectory):  Allow empty subdir.

2001-10-19  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Fix test for lib.exe. Can't set ms_librarian
	before calling AC_CHECK_PROG, as it doesn't actually check
	anything if the result variable has been preset...

2001-10-19  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/gutils.c (g_set_prgname, g_get_prgname): Use another LOCK