@@ -1,3 +1,10 @@
+2001-10-26  Tor Lillqvist  <tml@iki.fi>
+
+	* README.win32: Updates.
+
+	* tests/makefile.mingw.in
+	* tests/makefile.msc.in: Remove mainloop-test here, too.
+
 Wed Oct 24 11:10:54 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* configure.in: Version 1.3.10, interface age, binary age = 0.
