@@ -10,6 +10,8 @@ TOP = ..\..
 INCLUDES = -I .. -I ..\glib -I ..\gmodule
 DEFINES = -DHAVE_CONFIG_H
 
+# mainloop-test removed for now until it is fixed
+
 TESTS = \
 	testglib.exe \
 	testgdate.exe \
@@ -21,7 +23,6 @@ TESTS = \
 	iochannel-test.exe	\
 	hash-test.exe	\
 	list-test.exe	\
-	mainloop-test.exe\
 	markup-test.exe	\
 	module-test.exe	\
 	node-test.exe	\
