@@ -1,3 +1,8 @@
+2001-10-26  Tor Lillqvist  <tml@iki.fi>
+
+	* makefile.mingw.in: When running glib-genmarshal, set PATH to
+	include ../glib.
+
 2001-10-23  Tor Lillqvist  <tml@iki.fi>
 
 	* Makefile.am: (Win32): If we have built the MSVC import library,
